--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
+    "next-superjson-plugin": "^0.5.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,7 +31,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
