--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-select": "^5.7.3",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "zustand": "^4.3.8"
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.195",
     "prisma": "^4.15.0"
   }
 }
